# ckanext-let-me-in

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/let_me_in/: cli.py  config.py  config_declaration.yaml  interfaces.py  plugin.py  utils.py  views.py
ckanext/let_me_in/logic/: action.py  auth.py  schema.py  validators.py
ckanext/let_me_in/tests/: test_auth.py  test_config.py  test_interface.py  test_logic.py  test_plugin.py  test_validators.py  test_views.py
