[metadata]
name = ckanext-let-me-in
version = 1.0.1
description = An extension that generates a one-time login link for a user
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mutantsan/ckanext-let-me-in
author = Oleksandr Cherniavskyi
author_email = mutantsan@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             let_me_in = ckanext.let_me_in.plugin:LetMeInPlugin
             test_otl_plugin = ckanext.let_me_in.tests.test_interface:TestOTLPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/let_me_in/i18n/ckanext-let_me_in.pot
width = 80

[init_catalog]
domain = ckanext-let_me_in
input_file = ckanext/let_me_in/i18n/ckanext-let_me_in.pot
output_dir = ckanext/let_me_in/i18n

[update_catalog]
domain = ckanext-let_me_in
input_file = ckanext/let_me_in/i18n/ckanext-let_me_in.pot
output_dir = ckanext/let_me_in/i18n
previous = true

[compile_catalog]
domain = ckanext-let_me_in
directory = ckanext/let_me_in/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
